Fix x overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body, #root {
   justify-content: center;
   align-items: center;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 .main {
